--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "bmad-scraparer-compare",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test:db": "tsx src/scripts/test-db-connection.ts"
+    "test:db": "tsx src/scripts/test-db-connection.ts",
+    "scrape:poc": "tsx src/scripts/scrape-poc.ts"
   },
   "description": "Competitive intelligence platform for telecom pricing analysis",
   "dependencies": {
@@ -18,18 +22,22 @@
     "lucide-react": "^0.553.0",
     "next": "^16.0.3",
     "pg": "^8.16.3",
+    "pino": "^9.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@playwright/test": "^1.56.1",
     "@types/pg": "^8.15.6",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
+    "pino-pretty": "^13.0.0",
+    "playwright": "^1.56.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6"
