--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:db": "tsx src/scripts/test-db-connection.ts",
     "scrape:poc": "tsx src/scripts/scrape-poc.ts"
   },
@@ -33,6 +36,7 @@
     "@types/pg": "^8.15.6",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
@@ -40,6 +44,7 @@
     "playwright": "^1.56.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "tsx": "^4.20.6"
+    "tsx": "^4.20.6",
+    "vitest": "^2.1.8"
   }
 }
