Base line for story 2.2

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:coverage": "vitest run --coverage",
     "test:db": "tsx src/scripts/test-db-connection.ts",
     "scrape:poc": "tsx src/scripts/scrape-poc.ts",
+    "scrape:telcos": "tsx src/scripts/scrape-telcos.ts",
     "migrate": "tsx src/scripts/run-migration.ts"
   },
   "description": "Competitive intelligence platform for telecom pricing analysis",
