--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:db": "tsx src/scripts/test-db-connection.ts",
+    "scrape": "tsx src/scripts/scrape.ts",
     "scrape:poc": "tsx src/scripts/scrape-poc.ts",
     "scrape:telcos": "tsx src/scripts/scrape-telcos.ts",
     "scrape:uswitch": "tsx src/scripts/test-uswitch.ts",
