feat: add Browserless support for production scraping
- Create centralized browser helper with environment detection
- Production: connects to Browserless via wss://production-sfo.browserless.io/chromium/playwright
- Development: uses local Playwright with fallback support
- Update all scrapers (O2, Vodafone, Three, Sky, Tesco, Giffgaff) to use launchBrowser()
- Add detailed error logging for connection issues
- Requires BROWSERLESS_TOKEN env var in production

Fixes: Playwright browsers not available on Vercel serverless
Tested: ✅ Browserless connection working locally

--- a/.env.local.example
+++ b/.env.local.example
@@ -6,3 +6,12 @@ GEMINI_API_KEY=your_gemini_api_key_here
 
 # Dashboard Authentication
 DASHBOARD_PASSWORD=your_secure_password_here
+
+# Browserless Configuration (for production on Vercel)
+# Optional for local development - will use local Playwright if not set
+# Required for production deployment
+BROWSERLESS_TOKEN=your_browserless_token_here
+
+# Inngest Configuration
+INNGEST_EVENT_KEY=your_inngest_event_key
+INNGEST_SIGNING_KEY=your_inngest_signing_key
