--- a/package.json
+++ b/package.json
@@ -33,9 +33,15 @@
   "description": "Competitive intelligence platform for telecom pricing analysis",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "inngest": "^3.45.1",
     "lucide-react": "^0.553.0",
@@ -44,6 +50,8 @@
     "pino": "^9.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
@@ -66,6 +74,7 @@
     "pino-pretty": "^13.0.0",
     "playwright": "^1.56.1",
     "postcss": "^8.5.6",
+    "shadcn-ui": "^0.9.5",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6",
     "vitest": "^2.1.8"
