Cleanup and fixes for layout

--- a/docs/qa/gates/4.5-plan-data-table.yml
+++ b/docs/qa/gates/4.5-plan-data-table.yml
@@ -7,6 +7,9 @@ reviewer: 'Quinn (Test Architect)'
 review_date: '2025-11-20'
 fix_applied: '2025-11-20'
 fix_summary: 'Installed @testing-library/dom and @testing-library/user-event packages. Migrated all test interactions from fireEvent to userEvent API for RTL v16 compatibility.'
+superseded_by: 'Story 5.4 - Plan Data Table Redesign'
+superseded_date: '2025-11-27'
+superseded_note: 'Original PlanTable component replaced by PlansContent + PlanFilterBar + PlanDataTable architecture for better separation of concerns and enhanced filtering capabilities.'
 
 # Detailed Assessment
 requirements_traceability: FULLY_IMPLEMENTED
@@ -16,11 +19,11 @@ requirements_traceability: FULLY_IMPLEMENTED
   - test_status: ALL_PASSING
 
 test_coverage: EXCELLENT
-  - test_file_exists: true
-  - test_file_path: src/components/dashboard/__tests__/PlanTable.test.tsx
-  - tests_claimed: 21
-  - tests_running: 21
-  - tests_passing: 21
+  - test_file_exists: false (removed in Story 5.4)
+  - test_file_path: src/components/dashboard/__tests__/PlanTable.test.tsx (REMOVED)
+  - original_tests_claimed: 21
+  - original_tests_running: 21
+  - original_tests_passing: 21
   - issue_resolved: true
   - resolution_details: |
       Root cause: Missing @testing-library/dom and @testing-library/user-event packages
@@ -28,6 +31,7 @@ test_coverage: EXCELLENT
       Migrated all fireEvent.click() -> userEvent.click()
       Migrated all fireEvent.change() -> userEvent.type()
       All test functions now async with proper await handling
+      NOTE: Component and tests removed in Story 5.4 redesign
 
 code_quality: GOOD
   - component_structure: clean separation of concerns
@@ -36,6 +40,7 @@ code_quality: GOOD
   - areas_for_improvement:
       - type safety for plan_data field access
       - performance may degrade with large datasets
+  - redesign_note: Story 5.4 improved architecture with three separate components (PlansContent, PlanFilterBar, PlanDataTable)
 
 security: NO_CONCERNS
   - no_sql_injection_risk: server-side queries only
